# detection-naked

./: CMakeLists.txt  README.md
demo/: lena-detection.webm
src/: cascadeObjectDetection.cpp  cascadeObjectDetection.hpp  config.cpp  config.hpp  detection.cpp  detection.h  haar.cpp  main.cpp  objectDetection.hpp  objectDetection_c.h  precomp.hpp  preprocessing.h  utility.h
